--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-chartjs-2": "^4.1.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-swipeable": "^7.0.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
